教师-个人荣誉

--- a/teacher_html/teacher_honor-mine.html
+++ b/teacher_html/teacher_honor-mine.html
@@ -41,47 +41,58 @@
             </ul>
     </div>
 
-<div class="weui_panel_bd ">
-   <div class="weui_panel mar_t12">
+<div class="weui_panel_bd">
+   <div class="weui_panel mar_t12"><span class="weui-mark-rt bg-green mar_t20 mar_r10 zindex2">删除</span><div class="weui-mark-vip"><span class="weui-mark-lt bg-orange zindex2" >审核中</span></div>
             <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd rel  honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
-                    <span class="weui-mark-rb honor-mark">审核中</span>
+                   
                 </div>
                 <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span><span class="mar_r5 f14 f-999 right" title="2017-03-12">2017-03-12</span></h3>
-                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan2 mar_r5"></i>(15)</span><span class="weui_btn weui_btn_mini bg-green right f12 mar_r5">删除</span></p>
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit wid-r-50" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span><!--<span class="icon icon-shanchu honor_del abs mar_r15 z-ind1000"></span>--></h3>
+                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
+                </div>
+            </a>
+    </div>
+   <div class="weui_panel weui_panel_access">
+            <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <div class="weui_media_hd honor-img">
+                    <div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
+                </div>
+                <div class="weui_media_bd honor-img">
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit wid-r-30" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span></h3>
+                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
                 </div>
             </a>
     </div>        
-   <div class="weui_panel">
+   <div class="weui_panel weui_panel_access">
             <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
-                <div class="weui_media_hd rel  honor-img">
+                <div class="weui_media_hd honor-img">
                     <img class="weui_media_appmsg_thumb" src="../images/u253.png" alt="">
                 </div>
                 <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛</span><span class="mar_r5 f14 f-999 right" title="2017-03-12">2017-03-12</span></h3>
-                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan2 mar_r5"></i>(15)</span></p>
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛</span></h3>
+                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
                 </div>
             </a>
     </div>        
-   <div class="weui_panel">
+   <div class="weui_panel weui_panel_access">
             <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
-                <div class="weui_media_hd rel  honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
+                <div class="weui_media_hd honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
                 </div>
                 <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span><span class="mar_r5 f14 f-999 right" title="2017-03-12">2017-03-12</span></h3>
-                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan2 mar_r5"></i>(15)</span></p>
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span></h3>
+                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
                 </div>
             </a>
     </div>        
-   <div class="weui_panel">
+   <div class="weui_panel weui_panel_access">
             <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
-                <div class="weui_media_hd rel  honor-img">
+                <div class="weui_media_hd honor-img">
                     <img class="weui_media_appmsg_thumb" src="../images/u205.png" alt="">
                 </div>
                 <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛</span><span class="mar_r5 f14 f-999 right" title="2017-03-12">2017-03-12</span></h3>
-                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan2 mar_r5"></i>(15)</span></p>
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛</span></h3>
+                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r10 pad_r10 weui-border-r"></em><span>梁雨诗</span><em class="mar_r10 pad_r10 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
                 </div>
             </a>
     </div>        
