教师个人荣誉

--- a/teacher_html/teacher_honor-apply.html
+++ b/teacher_html/teacher_honor-apply.html
@@ -148,7 +148,12 @@ $(function(){
                     <input  type="hidden"  id="" />
                 </div>
             </div>   
-            <div class="honor_fj f-999 pad_lr15 pad_b15 rel"><span class="iblock honor_fj-con wid-r-40" title="bba1cd11728b47103cfff2dbcbcec3fdfd0323d0.jpg"><i class="icon icon-fujian mar_r5 f-blue"></i><u>bba1cd11728b47103cfff2dbcbcec3fdfd0323d0.jpg</u></span><i class="icon icon-shanchu abs honor_del mar_r15"></i></div>
+            <div class="honor_fj f-999 pad_lr15 pad_b15 rel">
+              <span class="iblock honor_fj-con wid-r-40" title="bba1cd11728b47103cfff2dbcbcec3fdfd0323d0.jpg"><i class="icon icon-fujian mar_r5 f-blue"></i>
+                <u>bba1cd11728b47103cfff2dbcbcec3fdfd0323d0.jpg</u>
+              </span>
+              <i class="icon icon-shanchu abs honor_del mar_r15"></i>
+            </div>
            
  </div>
  
