--- a/teacher_html/teacher_honor-apply.html
+++ b/teacher_html/teacher_honor-apply.html
@@ -157,8 +157,8 @@ $(function(){
            
  </div>
  
-    <div class="weui_btn_area">
-        <a href="javascript:;" class="weui_btn weui_btn_primary bg-green"  id='sd1'>提交</a>
+    <div class="weui_btn_area weui_btn_area_inline pad_b15">
+        <a id="reset" href="javascript:;" class="weui_btn weui_btn_primary bg-green-b" onclick="document.getElementById('form').reset();">重置</a><a href="javascript:;" class="weui_btn weui_btn_primary bg-green"  id='sd1'>提交</a>
     </div>
  </form>
 
