--- a/teacher_html/teacher_honor-mine.html
+++ b/teacher_html/teacher_honor-mine.html
@@ -18,6 +18,13 @@
     });
 	  $('.weui_tab').tab();
 	  	  });
+ $(document).on("click", "#sd2", function() {
+        $.confirm("您确定要删除吗?",  function() {
+          $.toast("删除成功!");
+        }, function() {
+          //取消操作
+        });
+      });
 </script>    
 </head>
 
@@ -42,7 +49,7 @@
     </div>
 
 <div class="weui_panel_bd">
-   <div class="weui_panel mar_t12"><span class="weui-mark-rt bg-green mar_t20 mar_r10 zindex2">删除</span><div class="weui-mark-vip"><span class="weui-mark-lt bg-orange zindex2" >审核中</span></div>
+   <div class="weui_panel mar_t12"><span class="weui-mark-rt bg-green mar_t20 mar_r10 zindex2" id="sd2">删除</span><div class="weui-mark-vip"><span class="weui-mark-lt bg-orange zindex2" >审核中</span></div>
             <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd rel  honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
                    
