--- a/teacher_html/teacher_honor-list.html
+++ b/teacher_html/teacher_honor-list.html
@@ -69,7 +69,7 @@ $(function(){
                    
                 </div>
                 <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit wid-r-50" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span><!--<span class="icon icon-shanchu honor_del abs mar_r15 z-ind1000"></span>--></h3>
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit wid-r-40" title="计算机科技比赛">计算机科技比赛计算机科技</span><!--<span class="icon icon-shanchu honor_del abs mar_r15 z-ind1000"></span>--></h3>
                     <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r5 pad_r5 weui-border-r"></em><span>梁雨诗</span><em class="mar_r5 pad_r5 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
                 </div>
             </a>
@@ -80,7 +80,7 @@ $(function(){
                     <div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
                 </div>
                 <div class="weui_media_bd honor-img">
-                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit wid-r-30" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span></h3>
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit wid-r-30" title="计算机科技比赛">计算机科技比赛计算机科技</span></h3>
                     <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r5 pad_r5 weui-border-r"></em><span>梁雨诗</span><em class="mar_r5 pad_r5 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
                 </div>
             </a>
@@ -101,7 +101,7 @@ $(function(){
                 <div class="weui_media_hd honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
                 </div>
                 <div class="weui_media_bd">
-                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛计算机科技比赛计算机科技比赛</span></h3>
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit" title="计算机科技比赛">计算机科技比赛计算机科技</span></h3>
                     <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r5 pad_r5 weui-border-r"></em><span>梁雨诗</span><em class="mar_r5 pad_r5 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
                 </div>
             </a>
