新增学生-个人荣誉

--- a/student_html/stu_function.html
+++ b/student_html/stu_function.html
@@ -64,7 +64,7 @@ document.addEventListener("DOMContentLoaded", function(){
                         <p class="weui_media_desc"><span>体育测试</span><em class="mar_r15 pad_r15 weui-border-r"></em><span>体检报告</span></p>
                     </div>
                 </a>
-                <a href="javascript:void(0);" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <a href="stu_honor-list.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                     <div class="weui_media_hd">
                         <span class="icon icon-rongyu f45 middle f-orange"></span>
                     </div>
