--- a/student_html/stu_honor-mine.html
+++ b/student_html/stu_honor-mine.html
@@ -32,7 +32,7 @@
 	
 
 <div class="weui_btn_primary weui-header"> 
-    <div class="weui-header-left"> <a href="teacher_honor-list.html" class="icon icon-icon1 f20"></a>  </div>
+    <div class="weui-header-left"> <a href="stu_honor-list.html" class="icon icon-icon1 f20"></a>  </div>
     <h1 class="weui-header-title">我的申报</h1>
 </div>
 <div id="tagnav" class="weui-navigator weui-navigator-wrapper">
@@ -50,7 +50,7 @@
 
 <div class="weui_panel_bd">
    <div class="weui_panel mar_t12"><span class="weui-mark-rt bg-green mar_t20 mar_r10 zindex2"  id="sd2">删除</span><div class="weui-mark-vip"><span class="weui-mark-lt bg-orange zindex2" >审核中</span></div>
-            <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd rel  honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
                    
                 </div>
@@ -61,7 +61,7 @@
             </a>
     </div>
    <div class="weui_panel weui_panel_access">
-            <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd honor-img">
                     <div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
                 </div>
@@ -72,7 +72,7 @@
             </a>
     </div>        
    <div class="weui_panel weui_panel_access">
-            <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd honor-img">
                     <img class="weui_media_appmsg_thumb" src="../images/u253.png" alt="">
                 </div>
@@ -83,7 +83,7 @@
             </a>
     </div>        
    <div class="weui_panel weui_panel_access">
-            <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
                 </div>
                 <div class="weui_media_bd">
@@ -93,7 +93,7 @@
             </a>
     </div>        
    <div class="weui_panel weui_panel_access">
-            <a href="teacher_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
+            <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd honor-img">
                     <img class="weui_media_appmsg_thumb" src="../images/u205.png" alt="">
                 </div>
