--- a/student_html/stu_honor-apply.html
+++ b/student_html/stu_honor-apply.html
@@ -53,7 +53,7 @@ $(function(){
 	
 
 <div class="weui_btn_primary weui-header"> 
-    <div class="weui-header-left"> <a href="teacher_honor-list.html" class="icon icon-icon1 f20"></a>  </div>
+    <div class="weui-header-left"> <a href="stu_honor-list.html" class="icon icon-icon1 f20"></a>  </div>
     <h1 class="weui-header-title">荣誉申报信息</h1>
 
 </div>
