--- a/student_html/stu_honor-list.html
+++ b/student_html/stu_honor-list.html
@@ -124,7 +124,7 @@ $(function(){
 <section class="weui-menu f16">
         
     <div class="weui-menu-inner">
-     <a href="teacher_honor-apply.html" class="weui_tabbar_item page-bd">
+     <a href="stu_honor-apply.html" class="weui_tabbar_item page-bd">
         <em class="icon icon-shenqing f-orange"></em>
         <span>荣誉申报</span>
      </a> 
