--- a/student_html/stu_honor-list.html
+++ b/student_html/stu_honor-list.html
@@ -62,7 +62,7 @@ $(function(){
             <a href="level_list.html" class="weui_navbar_item f-666">全部级别<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14"></i></a>
     </div>
 </div>
-<div class="weui_panel_bd">
+<div class="weui_panel_bd pad_t44">
    <div class="weui_panel mar_t12"><span class="weui-mark-rt bg-green mar_t20 mar_r10 zindex2"  id="sd2">删除</span><div class="weui-mark-vip"><span class="weui-mark-lt bg-orange zindex2" >审核中</span></div>
             <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd rel  honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
