--- a/teacher_html/teacher_health-list.html
+++ b/teacher_html/teacher_health-list.html
@@ -39,26 +39,6 @@ $(function(){
 	  });    
 
 </script>
-<!--搜索框-->
-<script>
- $(function(){
- $('.searchbar_wrap').searchBar({
-    cancelText:"取消",
-    searchText:'关键字',
-    onfocus: function (value) {
-    },
-    onblur:function(value) {
-    },
-    oninput: function(value) {
-    },
-    onsubmit:function(value){
-    },
-    oncancel:function(){
-    },
-    onclear:function(){
-    }});
-  });     
-</script>
 
 </head>
 
@@ -76,7 +56,7 @@ $(function(){
     </div>
 </div>
 <!--体质健康列表-->
-<div class="weui_panel_bd ">
+<div class="weui_panel_bd pad_t44">
    <div class="weui_panel weui_panel_access mar_t12">
             <a href="teacher_health-rpt.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd circle roles_pic bs">
