--- a/teacher_html/teacher_health-statistics.html
+++ b/teacher_html/teacher_health-statistics.html
@@ -67,7 +67,7 @@ $(function(){
     </div>
 </div>
 <!--体质健康统计-->
-<div class="weui_panel_bd ">
+<div class="weui_panel_bd pad_t44">
    <div class="weui_cells">
       <div class="weui_cells_title">学生身高/体重情况：</div>
       <div class="weui_cell">
