--- a/teacher_html/teacher_reports.html
+++ b/teacher_html/teacher_reports.html
@@ -76,7 +76,7 @@ $(function(){
     <h1 class="weui-header-title"  onclick="selectmenu('1');">一年级（2）班<i id="cell_1" class="icon icon-zhankaijiantou mar_l5 f14 f-green"></i></h1>
     <div class="weui-header-right"><a href="javascript:;" onclick="selectmenu('3');" class="weui_icon_search"></a></div> 
 </div>
-<div id="menu_3" style="display:none;">
+<div id="menu_3" style="display:none;" class="pad_t44">
     <div class="searchbar_wrap">
     </div>
 </div>
