--- a/student_html/stu_reports-more.html
+++ b/student_html/stu_reports-more.html
@@ -18,7 +18,7 @@
     <div class="weui-header-left"> <a href="stu_reports-detail.html" class="icon icon-icon1 f20"></a>  </div>
     <h1 class="weui-header-title">王牧之<span class="f16">-成长档案袋</span></h1>
 </div>
-<div class="scroll rel pad_t44">
+<div class="scroll rel">
     <div class="zmbox grade-l zindex2">
         <span class="grade-cell"><a class="zm-s" href="#g001">兴趣</a></span>
         <span class="grade-cell"><a class="zm-s" href="#g01">小一</a></span>
