--- a/teacher_html/teacher_records.html
+++ b/teacher_html/teacher_records.html
@@ -69,7 +69,7 @@ $(function(){
           <h1 class="weui-header-title"><a href="teacher_calendar.html" class="block">2017-03-13<i class="icon icon-rilixuanze mar_l5"></i></a></h1>
           <div class="weui-header-right"><a href="javascript:;" onclick="selectmenu('3');" class="weui_icon_search"></a></div> 
       </div>
-      <div id="menu_3" style="display:none;">
+      <div id="menu_3" style="display:none;" class="pad_t44">
           <div class="searchbar_wrap">
           </div>
       </div>
