--- a/student_html/stu_honor-mine.html
+++ b/student_html/stu_honor-mine.html
@@ -60,6 +60,17 @@
                 </div>
             </a>
     </div>
+   <div class="weui_panel"><span class="weui-mark-rt bg-green mar_t20 mar_r10 zindex2"  id="sd2">删除</span><div class="weui-mark-vip"><span class="weui-mark-lt bg-blue zindex2" >不通过</span></div>
+            <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
+                <div class="weui_media_hd rel  honor-img"><div class="tcenter bg-gray01 honor-icon tcenter"><span class="icon icon-qiyerongyu f40 middle f-999"></span></div>
+                   
+                </div>
+                <div class="weui_media_bd">
+                    <h3 class="weui_media_title f-black"><span class="f15 left honor-tit wid-r-40" title="计算机科技比赛">计算机科技比赛计算机科技</span><!--<span class="icon icon-shanchu honor_del abs mar_r15 z-ind1000"></span>--></h3>
+                    <p class="weui_media_desc f-blue"><span>一年级（1）班</span><em class="mar_r5 pad_r5 weui-border-r"></em><span>梁雨诗</span><em class="mar_r5 pad_r5 weui-border-r"></em><span><i class="icon icon-dianzan mar_r5"></i>15</span></p>
+                </div>
+            </a>
+    </div>
    <div class="weui_panel weui_panel_access">
             <a href="stu_honor-detail.html" class="weui_panel_ft weui_media_box weui_media_appmsg">
                 <div class="weui_media_hd honor-img">
