--- a/404.html
+++ b/404.html
@@ -11,9 +11,9 @@
   <script src="js/zepto.min.js"></script>
 </head>
 
-<body ontouchstart>
-    <div class="weui_msg bg-white" style="height:100%;">
-        <div class="weui_icon_area mar_t15 pad_t15"><i class=" icon icon-wron404 f-green nor-tips"></i></div>
+<body ontouchstart class="bg-white">
+    <div class="weui_msg bg-white">
+        <div class="weui_icon_area"><i class=" icon icon-wron404 f-green nor-tips"></i></div>
         <div class="weui_text_area">
             <h2 class="weui_msg_title">哎哟，好像出错了…</h2>
             <p class="weui_msg_desc">错误代码：404</p>
