消息推送同步家长页面调整（新增new提示）

--- a/teacher_html/teacher_evaluate.html
+++ b/teacher_html/teacher_evaluate.html
@@ -400,7 +400,7 @@ $('.weui-number-plus').click(function(){
     <label for="weuiAgree" class="weui-agree pad_t15">
             <input id="weuiAgree" class="weui-agree-checkbox" type="checkbox">
             <span class="weui-agree-text">
-                同步发给家长
+                同步发给家长<span class="weui-badge" style="margin-left: 5px;">New</span>
             </span>
         </label>
    <div class="weui_btn_area pad_t5">
