报告书详情也 页面调整

--- a/teacher_html/teacher_reports-detail.html
+++ b/teacher_html/teacher_reports-detail.html
@@ -62,7 +62,8 @@
   <tr><td>仪容仪表</td><td><span class=" f-blue">15</span></td></tr>
   <tr><td>仪容仪表</td><td><span class=" f-blue">15</span></td></tr>
   <tr><td>仪容仪表</td><td><span class=" f-blue">15</span></td></tr>
-  <tr><td class="bold f16 zwt_t_r">总分：</td><td class="zwt_t_l"><span class="bold f16 f-orange">115</span></td></tr>
+  <tr><td class="bold f16 pad_tb15">总分：</td><td><span class="bold f16 f-orange">115</span></td></tr>
+  <tr><td class=" tleft f-999 bg-gray01" colspan="2"><span class="mar_l15 f12"><i class="icon icon-tishi mar_r5 f14"></i>总分：各指标得分*各权重的相加总和</span></td></tr>
   </tbody>
   </table>
   </div>
@@ -116,7 +117,8 @@
   <tr><td>语文：</td><td><span class="f-orange">89</span></td><td>语文：</td><td><span class="f-orange">89</span></td><td>语文：</td><td><span class="f-orange">89</span></td></tr>
   <tr><td>语文：</td><td><span class="f-orange">89</span></td><td>语文：</td><td><span class="f-orange">89</span></td><td>语文：</td><td><span class="f-orange">89</span></td></tr>
   <tr><td>语文：</td><td><span class="f-orange">89</span></td><td>语文：</td><td><span class="f-orange">89</span></td><td>语文：</td><td><span class="f-orange">89</span></td></tr>
-  <tr><td class="bold f16 zwt_t_r" colspan="3">总分：</td><td colspan="3 " class="zwt_t_l"><span class="bold f16 f-orange">519</span></td></tr>
+  <tr><td class="bold f16" colspan="3">总分：</td><td colspan="3 "><span class="bold f16 f-orange">519</span></td></tr>
+  <tr><td class=" tleft f-999 bg-gray01" colspan="6"><span class="mar_l15 f12"><i class="icon icon-tishi mar_r5 f14"></i>总分：各科目成绩的相加总和</span></td></tr>
   </tbody>
   </table>
   <div class="zwt_nodata zwt_yc"><i class="iconfont icon-zanwujilu zwt_fz20"></i><br/>暂无成绩</div>
