报告书详情 样式调整

--- a/teacher_html/teacher_reports-detail.html
+++ b/teacher_html/teacher_reports-detail.html
@@ -45,7 +45,7 @@
   <table class="weui-table f14">
   <thead><tr class="f-999"><th>评价指标</th><th>次数</th><th>得分</th></tr></thead>
   <tbody>
-  <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
+  <tr><td>仪容仪表仪容仪表仪容仪表仪容仪表仪容仪表仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
   <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
   <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
   <tr><td>仪容仪表</td><td><span class="f-blue">11</span></td><td><span class=" f-orange ">25</span></td></tr>
@@ -161,6 +161,11 @@
   <div class="zwt_tzlist ub ub-ac">
   <div class="zwt_tzicon"><i class="iconfont icon-zuozhao"></i></div>
   <div class=" zwt_tztit">坐位体前屈：</div>
+  <div class="ub-f2">16.1厘米</div>
+  </div>
+  <div class="zwt_tzlist ub ub-ac">
+  <div class="zwt_tzicon"><i class="iconfont icon-zuozhao"></i></div>
+  <div class=" zwt_tztit">坐位体前屈坐位体前屈坐位体前屈坐位体前屈坐位体前屈：</div>
   <div class="ub-f2">16.1厘米</div>
   </div>
   
