报告书详情，快捷定位样式调整

--- a/teacher_html/teacher_reports-detail.html
+++ b/teacher_html/teacher_reports-detail.html
@@ -259,11 +259,11 @@
 <div class="zwt_order">
   <a class="zwt_trn">快速<br/>浏览</a>
   <div class="zwt_order_ul zwt_trn">
-  <div class="zwt_order_li">回到顶部</div>
-  <div class="zwt_order_li">学生评价</div>
-  <div class="zwt_order_li">体质健康</div>
-  <div class="zwt_order_li">个人荣誉</div>
-  <div class="zwt_order_li">实践活动</div>
+  <div class="zwt_order_li"><a href="#">回到顶部</a></div>
+  <div class="zwt_order_li"><a href="#">学生评价</a></div>
+  <div class="zwt_order_li"><a href="#">体质健康</a></div>
+  <div class="zwt_order_li"><a href="#">个人荣誉</a></div>
+  <div class="zwt_order_li"><a href="#">实践活动</a></div>
   </div>
   </div>
 
